k8s/staging-v2/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        fsGroup: 65534
      volumes:
        # Create the shared files volume to be used in both pods
        - name: shared-files
          emptyDir: {}
        - name: database
          secret:
            secretName: database
        - name: app
          secret:
            secretName: app
        - name: smtp
          secret:
            secretName: smtp
        - name: mailchimp
          secret:
            secretName: mailchimp
        - name: nginx-config-volume
          configMap:
            name: nginx-config
        - name: app-config-volume
          configMap:
            name: app-config
        - name: phpfpm-config-volume
          configMap:
            name: phpfpm-config
      containers:
        # Our PHP-FPM application
        - name: app
          image: ghcr.io/herams-who/herams-backend/app-v2:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: app-config-volume
              mountPath: "/run/config"
            - name: database
              mountPath: "/run/secrets/database"
            - name: mailchimp
              mountPath: "/run/secrets/mailchimp"
            - name: smtp
              mountPath: "/run/secrets/smtp"
            - name: app
              mountPath: "/run/secrets/app"
            - name: phpfpm-config-volume
              mountPath: "/php-fpm.conf"
              subPath: "php-fpm.conf"
            - name: shared-files
              mountPath: /var/www/html

        # Our nginx container, which uses the configuration declared above,
        # along with the files shared with the PHP-FPM app.
        - name: nginx
          image: ghcr.io/herams-who/docker/nginx:latest
          command: ["nginx", "-g", "daemon off;", "-c", "/config/nginx.conf"]
          livenessProbe:
            httpGet:
              path: /status
              port: 80
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - name: nginx-config-volume
              mountPath: /config

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  selector:
    app: "staging2-api"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "staging2-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "staging2-api"
  template:
    metadata:
      labels:
        app: "staging2-api"
    spec:
      securityContext:
        fsGroup: 65534
      volumes:
        # Create the shared files volume to be used in both containers
        - name: debugdata
          emptyDir: { }
        - name: shared
          emptyDir: {}
        - name: database
          secret:
            secretName: database
        - name: app
          secret:
            secretName: app
        - name: smtp
          secret:
            secretName: smtp
        - name: mailchimp
          secret:
            secretName: mailchimp
      containers:
        - name: api
          image: ghcr.io/herams-who/herams-backend/api:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: database
              mountPath: "/run/secrets/database"
            - name: smtp
              mountPath: "/run/secrets/smtp"
            - name: mailchimp
              mountPath: "/run/secrets/mailchimp"
            - name: app
              mountPath: "/run/secrets/app"
            - name: shared
              mountPath: /shared
            - name: debugdata
              mountPath: /debugdata
        # Our nginx container, which uses the configuration declared above,
        # along with the files shared with the PHP-FPM app.
        - name: nginx
          image: ghcr.io/herams-who/docker/nginx-api:latest
          livenessProbe:
            httpGet:
              path: /status
              port: 80
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared
              mountPath: /shared
