k8s/staging-v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
      - "*.v2.herams-staging.org"
      - v2.herams-staging.org
      - v2-api.herams-staging.org
      secretName: v2.herams-staging.tls
  rules:
  - host: v2.herams-staging.org
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 80
        pathType: Prefix
        path: /
  - host: v2-api.herams-staging.org
    http:
      paths:
        - backend:
            service:
              name: api-service
              port:
                number: 80
          pathType: Prefix
          path: /
